<resources>
    <string name="app_name">TEST</string>
    <string-array name="rlv_data">
        <item>Android</item>
        <item>Java</item>
        <item>iOS</item>
        <item>C++</item>
        <item>Ruby</item>
        <item>flutter</item>
        <item>Web</item>
        <item>PHP</item>
        <item>C</item>
    </string-array>
    <string name="rlv">RecyclerView</string>
    <string name="net">net_request</string>
    <string name="lv">listView</string>
    <string name="net_test">联网测试</string>
    <string name="test">测试使用</string>
    <!--打开蓝牙-->
    <string name="open_ble">open_bluetooth</string>
    <!--获取配对列表-->
    <string name="bond_devices">bonded_devices</string>
    <!--启用可检测-->
    <!--开启发现蓝牙设备-->
    <string name="discovery">discovery</string>
    <string name="test_data">测试数据</string>

    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="get">get请求</string>
    <string name="getasyn">get异步请求</string>
    <string name="post">post请求</string>
    <string name="postasyn">post异步请求</string>
    <string name="json_request">json请求</string>
    <string name="upload_file">上传文件</string>
    <string name="rx_get">rx_get请求</string>
    <string name="rx_post">rx_post 请求</string>
    <string name="app_interceptor">APP-Interceptor</string>
    <string name="net_interceptor">NET-Interceptor</string>
    <string name="remind_receive">接受内容</string>
</resources>
