<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="300dp"/>
    <Button
        android:id="@+id/bt_get"
        style="@style/ButtonTheme_Common"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get"/>

    <Button
        android:id="@+id/bt_post"
        style="@style/ButtonTheme_Common"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post"/>

    <Button
        android:id="@+id/bt_rx_get"
        style="@style/ButtonTheme_Common"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rx_get"/>
    <Button
        android:id="@+id/bt_rx_post"
        style="@style/ButtonTheme_Common"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rx_post"/>

</LinearLayout>