<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_test_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/test_data"
        android:importantForAutofill="no"
        tools:targetApi="o"
        android:inputType="text"/>
    <TextView
        style="@style/Widget.AppCompat.Button"
        android:id="@+id/tv_test"
        android:background="@drawable/button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/test"
        android:textColor="#FFFFFF"
        android:gravity="center" />
    <com.syd.study.recyclerview.CustomTextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="@dimen/textSize_title"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"/>
</LinearLayout>