<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/width_left_right"
        android:layout_marginEnd="@dimen/width_left_right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_open"
            style="@style/ButtonTheme_Common"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_ble"/>
        <Button
            style="@style/ButtonTheme_Common"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bond_devices"
            android:id="@+id/bt_bond_devices"/>
        <Button
            style="@style/ButtonTheme_Common"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_discovery"
            android:text="@string/discovery"
            />


    </LinearLayout>

    <ListView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/width_left_right"
        android:layout_marginEnd="@dimen/width_left_right">

    </ListView>

</LinearLayout>